Co-authored-by: ShayanG9 <ShayanG9@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "setbaud.h": "c"
+        "setbaud.h": "c",
+        "io.h": "c",
+        "sfr_defs.h": "c"
     }
 }
